# sqlx_logger

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: gelf.rs  main.rs
