[package]
name = "sqlx_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0"
env_logger = "0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "signal", "time"] }
sqlx = { version = "0", features = ["mssql", "mysql", "postgres", "sqlite", "any", "runtime-tokio-rustls"] }
clap = { version = "4", features = ["derive"] }
async-shutdown = "0"
derive_more = "0"
serde = "1"
serde_json = "1"